Added updating assignments and general README
