# backend-app/app/controllers/api/v1/assignments_controller.rb
@@ -1,6 +1,10 @@
 class Api::V1::AssignmentsController < ApplicationController
   def index
-    @assignments = Assignment.page(params[:page]).per(params[:per_page])
+    @assignments = Assignment
+    if params[:assignmentable_id].present? && params[:assignmentable_type].present?
+      @assignments = @assignments.by_assignmentable(params[:assignmentable_id], params[:assignmentable_type])
+    end
+    @assignments = @assignments.page(params[:page]).per(params[:per_page])
     render json: AssignmentSerializer.new(@assignments).serializable_hash
   end
 
@@ -16,7 +20,7 @@ class Api::V1::AssignmentsController < ApplicationController
   
   def update
     @assignment = Assignment.find(params[:id])
-    @assignment.update!(assignment_params)
+    @assignment.update!(assignment_params.compact)
     render json: AssignmentSerializer.new(@assignment).serializable_hash
   end
 
